public/css/footer.css
footer {
  background-color: var(--background-color-secondary);
}

footer .footer-inner {
  max-width: var(--desktop-max-width);
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
  align-items: baseline;
  justify-content: space-between;
  gap: 2rem;
  padding: var(--padding-lg) var(--padding) 2rem;
}

footer p,
footer a {
  font-size: 1rem;
  margin-bottom: 1rem;
}

footer h2 {
  font-size: 1.5rem;
}

footer ul.social-links {
  /* horizontally aligns first li and p of each footer section */
  margin-top: -4px;
}

footer a[href],
footer a[href]:visited {
  color: var(--color-accent);
  text-decoration: none;
}

footer a[href]:hover {
  text-decoration: underline;
}

footer a[href]:focus-visible {
  box-shadow: var(--focus-style-box-shadow);
  text-decoration: none;
}

